argocd/aws/203403084713/clusters/cbioportal-prod/apps/genome-nexus/gn_genie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: genome-nexus-genie
  name: genome-nexus-genie
  namespace: genome-nexus
spec:
  replicas: 2
  selector:
    matchLabels:
      run: genome-nexus-genie
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: genome-nexus-genie
    spec:
      containers:
      - env:
        - name: SERVER_PORT
          value: "8888"
        - name: MONGODB_URI
          value: mongodb://gn-mongo-genie-blue:27017/annotator?connectTimeoutMS=120000
        image: genomenexus/gn-spring-boot:2.1.2
        imagePullPolicy: Always
        command: [ "java" ]
        args: [
            "-Dspring.data.mongodb.uri=$(MONGODB_URI)",
            # this is to use VEP running inside K8s. Remove to use
            # grch37.rest.ensembl.org instead
            "-Dvep.url=http://gn-vep-111.genome-nexus:8080/vep/human/hgvs/VARIANT",
            "-Dgenomenexus.server.version=2.1.2",
            "-Dspring.mongodb.embedded.version=1.3",
            "-Dreplace_old_hgnc_gene_symbol=false",
            "-Dvep.max_page_size=5000",
            "-Dgn_vep.timeout.seconds=300",
            "-Dmyvariantinfo.url=https://myvariant.info/v1/variant/VARIANT",
            "-Dmyvariantinfo.max_page_size=10",
            "-Dgenexrefs.url=http://grch37.rest.ensembl.org/xrefs/id/ACCESSION?content-type=application/json",
            "-DmutationAssessor.url=http://mutationassessor.org/r3/?cm=var&var=VARIANT&frm=json&fts=input,rgaa,rgvt,msa,pdb,F_impact,F_score,vc_score,vs_score,info,var,gene,uprot,rsprot,gaps,msa_height,chr,rs_pos,rs_res,up_pos,up_res,cnt_cosmic,cnt_snps",
            "-Dpdb.header_service_url=http://files.rcsb.org/header/PDB_ID.pdb",
            "-Doncokb.url=https://www.oncokb.org/api/v1/annotate/mutations/byProteinChange?PROTEINCHANGE",
            "-jar",
            "/app.war"
        ]
        readinessProbe:
          httpGet:
            path: /ensembl/canonical-transcript/hgnc/tp53?isoformOverrideSource=uniprot
            port: 8888
          initialDelaySeconds: 240
          timeoutSeconds: 30
          periodSeconds: 60
        # TODO: create a better liveness probe (this is just readiness with
        # more lenience)
        livenessProbe:
          httpGet:
            path: /ensembl/canonical-transcript/hgnc/tp53?isoformOverrideSource=uniprot
            port: 8888
          initialDelaySeconds: 240
          timeoutSeconds: 120
          periodSeconds: 240
        name: genome-nexus-genie
        ports:
        - containerPort: 8888
          protocol: TCP
        resources:
          requests:
              memory: 3Gi
          limits:
              memory: 7Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on genome nexus machines
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "genome-nexus"
          effect: "NoSchedule"
      nodeSelector:
        workload: genome-nexus
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: genome-nexus-genie
    app: genome-nexus-genie
  name: genome-nexus-genie
  namespace: genome-nexus
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  - port: 443
    name: https
    targetPort: 8888
  selector:
    run: genome-nexus-genie
  type: ClusterIP
