argocd/aws/203403084713/clusters/cbioportal-prod/apps/genome-nexus/gn_gnap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: genome-nexus
    run: genome-nexus-gnap
  name: genome-nexus-gnap
  namespace: genome-nexus
spec:
  replicas: 2
  selector:
    matchLabels:
      run: genome-nexus-gnap
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: genome-nexus-gnap
    spec:
      containers:
      - env:
        - name: SERVER_PORT
          value: "8888"
        - name: MONGODB_URI
          value: mongodb://gn-mongo-gnap-blue:27017/annotator?connectTimeoutMS=120000
        image: genomenexus/gn-spring-boot:2.2.2
        imagePullPolicy: Always
        command: [ "java" ]
        args: [
            "-Dspring.data.mongodb.uri=$(MONGODB_URI)",
            # this is to use VEP running inside K8s. Remove to use
            # grch37.rest.ensembl.org instead
            "-Dvep.url=http://gn-vep-111.genome-nexus:8080/vep/human/hgvs/VARIANT",
            "-Dcache.enabled=true",
            "-Dreplace_old_hgnc_gene_symbol=true",
            "-Dgenomenexus.server.version=2.2.2",
            "-Dspring.mongodb.embedded.version=1.5",
            "-Dvep.max_page_size=5000",
            "-Dgn_vep.timeout.seconds=300",
            "-jar",
            "/app.war"
        ]
        readinessProbe:
          httpGet:
            path: /ensembl/canonical-transcript/hgnc/tp53?isoformOverrideSource=uniprot
            port: 8888
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 5
        name: genome-nexus-gnap
        ports:
        - containerPort: 8888
          protocol: TCP
        resources:
          requests:
              memory: 3Gi
          limits:
              memory: 7Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on genome nexus machines
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "genome-nexus"
          effect: "NoSchedule"
      nodeSelector:
        workload: genome-nexus
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: genome-nexus-gnap
    app: genome-nexus-gnap
  name: genome-nexus-gnap
  namespace: genome-nexus
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  - port: 443
    name: https
    targetPort: 8888
  selector:
    run: genome-nexus-gnap
  type: ClusterIP
