argocd/aws/203403084713/clusters/cbioportal-prod/apps/genome-nexus/gn_spring_boot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: gn-spring-boot
  name: gn-spring-boot
  namespace: genome-nexus
spec:
  replicas: 2
  selector:
    matchLabels:
      run: gn-spring-boot
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: gn-spring-boot
    spec:
      containers:
      - env:
        - name: SERVER_PORT
          value: "8888"
        - name: MONGODB_URI
          value: mongodb://gn-mongo-grch37-ensembl111-green:27017/annotator?connectTimeoutMS=120000
        - name: SENTRY_DSN
          valueFrom: 
            secretKeyRef:
              name: genome-nexus-sentry-dsn
              key: dsn
        image: genomenexus/gn-spring-boot:2.2.2
        imagePullPolicy: Always
        command: [ "java" ]
        args: [
            # use ZGC (shenandoah like GC, openjdk (Oracle) image does not
            # include shenandoah)
            "-Dvep.url=http://grch37.rest.ensembl.org/vep/human/hgvs/VARIANT?content-type=application/json&xref_refseq=1&ccds=1&canonical=1&domains=1&hgvs=1&numbers=1&protein=1&AlphaMissense=1",
            "-Dcache.enabled=true",
            "-Dreplace_old_hgnc_gene_symbol=true",
            "-Dgenomenexus.server.version=2.2.2",
            "-Dspring.mongodb.embedded.version=1.5",
            "-Xms500m",
            "-Xmx6g",
            "-XX:+UnlockExperimentalVMOptions",
            "-XX:+UseShenandoahGC",
            "-XX:ShenandoahUncommitDelay=1000",
            "-XX:ShenandoahGuaranteedGCInterval=10000",
            "-Dspring.data.mongodb.uri=$(MONGODB_URI)",
            # this is to use VEP running inside K8s. Remove to use
            # grch37.rest.ensembl.org instead
            # "-Dgn_vep.region.url=http://gn-vep/vep/human/region/VARIANT",
            "-jar",
            "/app.war"
        ]
        # TODO: create a better readiness probe
        readinessProbe:
          httpGet:
            path: /ensembl/canonical-transcript/hgnc/tp53?isoformOverrideSource=uniprot
            port: 8888
          initialDelaySeconds: 240
          timeoutSeconds: 30
          periodSeconds: 60
        # TODO: create a better liveness probe (this is just readiness with
        # more lenience)
        livenessProbe:
          httpGet:
            path: /ensembl/canonical-transcript/hgnc/tp53?isoformOverrideSource=uniprot
            port: 8888
          initialDelaySeconds: 240
          timeoutSeconds: 120
          periodSeconds: 240
        name: gn-spring-boot
        ports:
        - containerPort: 8888
          protocol: TCP
        resources:
          requests:
              memory: 3Gi
          limits:
              memory: 7Gi # when starting up, 1 pod use 4.25GB and another pod uses 5.1GB, then goes down to < 1GB for each pod
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on genome nexus machines
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "genome-nexus"
          effect: "NoSchedule"
      nodeSelector:
        workload: genome-nexus
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: gn-spring-boot
    app: gn-spring-boot
  name: genome-nexus
  namespace: genome-nexus
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  - port: 443
    name: https
    targetPort: 8888
  selector:
    run: gn-spring-boot
  type: ClusterIP
