argocd/aws/203403084713/clusters/cbioportal-prod/apps/genome-nexus/gn_spring_boot_grch38.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: gn-spring-boot-grch38
    # Datadog Unified Service Tagging
    tags.datadoghq.com/env: gn-grch38
    tags.datadoghq.com/service: genome-nexus
    tags.datadoghq.com/version: 1.4.1
  name: gn-spring-boot-grch38
  namespace: genome-nexus
spec:
  replicas: 2
  selector:
    matchLabels:
      run: gn-spring-boot-grch38
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        # Enable Datadog Java library injection
        admission.datadoghq.com/java-lib.version: v1.59.0
      labels:
        run: gn-spring-boot-grch38
        # Datadog Labels
        admission.datadoghq.com/enabled: "true"
        tags.datadoghq.com/env: gn-grch38
        tags.datadoghq.com/service: genome-nexus
        tags.datadoghq.com/version: 1.4.1
    spec:
      containers:
      - name: gn-spring-boot-grch38
        image: genomenexus/gn-spring-boot:1.4.1
        imagePullPolicy: Always
        command: [ "java" ]
        args: [
            # use ZGC (shenandoah like GC, openjdk (Oracle) image does not
            # include shenandoah)
            "-Xms500m",
            "-Xmx6g",
            "-XX:+UnlockExperimentalVMOptions",
            "-XX:+UseShenandoahGC",
            "-XX:ShenandoahUncommitDelay=1000",
            "-XX:ShenandoahGuaranteedGCInterval=10000",
            "-Dspring.data.mongodb.uri=$(MONGODB_URI)",
            # this is to use VEP running inside K8s. Remove to use
            # rest.ensembl.org (grch38) instead
            # "-Dgn_vep.region.url=http://gn-vep/vep/human/region/VARIANT",
            "-Dgenomenexus.server.version=1.4.1",
            "-Dspring.mongodb.embedded.version=1.3",
            "-Dgenexrefs.url=https://rest.ensembl.org/xrefs/id/ACCESSION?content-type=application/json",
            "-Dvep.url=https://rest.ensembl.org/vep/human/hgvs/VARIANT?content-type=application/json&xref_refseq=1&ccds=1&canonical=1&domains=1&hgvs=1&numbers=1&protein=1",
            "-DmutationAssessor.url=http://mutationassessor.org/r3/?cm=var&var=hg38,VARIANT&frm=json&fts=input,rgaa,rgvt,msa,pdb,F_impact,F_score,vc_score,vs_score,info,var,gene,uprot,rsprot,gaps,msa_height,chr,rs_pos,rs_res,up_pos,up_res,cnt_cosmic,cnt_snps",
            "-Dmyvariantinfo.url=https://myvariant.info/v1/variant/VARIANT?assembly=hg38",
            "-jar",
            "/app.war"
        ]
        readinessProbe:
          httpGet:
            path: /ensembl/canonical-transcript/hgnc/tp53?isoformOverrideSource=uniprot
            port: 8888
          initialDelaySeconds: 240
          timeoutSeconds: 60
          periodSeconds: 60
        # TODO: create a better liveness probe (this is just readiness with
        # more lenience)
        livenessProbe:
          httpGet:
            path: /ensembl/canonical-transcript/hgnc/tp53?isoformOverrideSource=uniprot
            port: 8888
          initialDelaySeconds: 240
          timeoutSeconds: 180
          periodSeconds: 240
        ports:
        - containerPort: 8888
          protocol: TCP
        resources:
          requests:
            memory: 3Gi
          limits:
            memory: 7Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on genome nexus machines
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "genome-nexus"
          effect: "NoSchedule"
      nodeSelector:
        workload: genome-nexus
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: gn-spring-boot-grch38
    app: gn-spring-boot-grch38
  name: genome-nexus-grch38
  namespace: genome-nexus
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  - port: 443
    name: https
    targetPort: 8888
  selector:
    run: gn-spring-boot-grch38
  type: ClusterIP
