argocd/aws/203403084713/clusters/cbioportal-prod/apps/genome-nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  name: gn-ingress
  namespace: genome-nexus
spec:
  rules:
    - host: www.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: v2.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: v1.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: beta.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus-beta
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: grch38.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus-grch38
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: genie.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus-genie
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: annotation.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus-gnap
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: vep111.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: genome-nexus-vep111
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - www.genomenexus.org
        - v2.genomenexus.org
        - v1.genomenexus.org
        - beta.genomenexus.org
        - grch38.genomenexus.org
        - genie.genomenexus.org
        - annotation.genomenexus.org
        - vep111.genomenexus.org
      secretName: genome-nexus-cert
